# python-api-framework

./: .gitignore  README.md  pyproject.toml  pytest.ini
framework/common/: client.py  env_vars.py  response.py
framework/models/: charging_states.py  control_pilot.py  electrical_voltage.py
framework/objects/: control_pilot.py
framework/resources/: __init__.py
framework/resources/ev/: __init__.py
framework/resources/ev/charging/: __init__.py
framework/resources/evse/: __init__.py
framework/resources/evse/cp/: __init__.py
mock_server/: server.py
tests/: README.md  conftest.py  test_ev.py
